# LGM_BFSDE

./: .gitignore  README.md  example_execution.sh  experiments_IRS.sh  experiments_batch_size.sh  experiments_epochs.sh  experiments_schemas.sh  experiments_sigmas.sh  experiments_swaption.sh  methodology.md  notas.md  notas_reunión.md  pyproject-poetry.toml  pyproject.toml  pyproject_poetry.toml
.github/workflows/: ci.yml
configs/: config.json  ff_config.json
models_store/: irs_model_lgm_single_step1_1000.h5  irs_model_lgm_single_step2_1000.h5  irs_model_lgm_single_step4_1000.h5  irs_model_lgm_single_step8_1000.h5  swaption_model_lgm_single_step1_100.h5  swaption_model_lgm_single_step1_1000.h5  swaption_model_lgm_single_step1_2_1000_100.h5  swaption_model_lgm_single_step2_1000.h5  swaption_model_lgm_single_step2_4_1000_200.h5  swaption_model_lgm_single_step4_1000.h5  swaption_model_lgm_single_step8_1000.h5  swaption_model_lgm_single_step8_16_1000.h5  zerobond_model_lgm_single_step1_100.h5  zerobond_model_lgm_single_step1_1000.h5  zerobond_model_lgm_single_step1_1000_100.h5  zerobond_model_lgm_single_step1_1000_50_v1.h5  zerobond_model_lgm_single_step2_1000.h5  zerobond_model_lgm_single_step2_1000_1.h5  zerobond_model_lgm_single_step2_1000_100.h5  zerobond_model_lgm_single_step3_1000_150.h5  zerobond_model_lgm_single_step4_1000.h5  zerobond_model_lgm_single_step4_1000_200.h5  zerobond_model_lgm_single_step4_1000_200_v2.h5  zerobond_model_lgm_single_step5_1000_250_v1.h5  zerobond_model_lgm_single_step8_1000.h5  zerobond_model_lgm_single_step8_10000_200.h5  zerobond_model_lgm_single_step8_1000_200.h5
notebooks/: handmade_derivatives.ipynb  plot_phis.ipynb  simulation.ipynb  simulation_irs.ipynb  simulation_zero_bound.ipynb  test_,smooth_maximum.ipynb  test_irs_w_results.ipynb  test_irs_w_results_cluster.ipynb  test_model_gradient.ipynb  test_phis.ipynb  test_results_Ts.ipynb  test_results_basic.ipynb  test_results_differents_T.ipynb  test_results_differents_epochs.ipynb  test_results_schemas.ipynb  test_swaption_w_results.ipynb  test_swaption_w_results_cluster.ipynb  test_zerobond.ipynb  test_zerobond_w_results.ipynb  tests_gradients.ipynb  tf_test_model_gradient.ipynb  tf_trainer_example.ipynb
notebooks/code_tests/: handmade_derivatives.ipynb  tests_gradients.ipynb  tf_test_jacobian_rnn.ipynb  tf_test_model_gradient.ipynb  tf_test_model_jacobian.ipynb
notebooks/configs/: ff_config.json
notebooks/losses/: losses.py
notebooks/model/: model_lgm.py  model_lgm_single_step.py
notebooks/utils/simulator/: simulator.py
notebooks/utils/utils/: utils.py
scripts/: check_gpus.py  launcher.py
scripts/configs/: ff_config.json
scripts/losses/: losses.py
scripts/model/: lgm_adjusted.py  lgm_naive.py  lgm_naive_time_adjust.py  model_lgm.py  model_lgm_single_step.py
scripts/models/: __init__.py  model_lgm.py  model_lgm_single_step.py
scripts/trainer/: trainer.py
scripts/utils/preprocess/: preprocess.py
scripts/utils/simulator/: simulator.py
scripts/utils/tester/: tester.py
scripts/utils/utils/: utils.py  visual_utils.py
test/gradient/: test_gradients.py
test/loss/: test_loss.py  test_loss_results_tf.py
test/model/: model_tf.py  test_custom_step.py  test_predict_tf.py
test/phi/: test_irs.py  test_swaption.py  test_zerobound.py
test/simulator/: test_simulator.py
