[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lgm_bdse"
description = 'Borja'
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [{ name = "Borja", email = "borjaf696@gmail.com" }]
classifiers = [
        "Development Status :: 4 - Beta",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
        "redis-py-cluster>=2.1.3",
        "numpy>=1.23.3",
        "pandas>=1.5.0",
        "scipy>=1.9.1",
        "ortools>=9.3",
        "requests>=2.28.1",
        "rpy2>=3.5.4",
        "seaborn>=0.12.1",
        "openpyxl>=3.0.10",
        "google-api-python-client>=2.63.0",
        "oauth2client>=4.1.3",
        "xlrd>=2.0.1",
        "mysql-connector-python>=8.0.30",
        "croniter>=1.3.7",
        "tzlocal>=4.2",
        "click>=8.1.3",
        "scikit-learn>=1.1.3",
        "tensorflow>=2.11.0",
]

[tool.hatch.version]
path = "lgm_bdse/__about__.py"

[tool.hatch.envs.default]
path = ".venv"
dependencies = [
        "jupyterlab>=3.4.8",
        "black>=22.10.0",
        "pytest",
        "pytest-cov",
        "isort>=5.10.1",
        "jupyterlab-code-formatter>=1.5.3",
        "python-dotenv>=0.21.0",
        "matplotlib>=3.6.1",
        "mypy>=0.991",
        "pandas-stubs>=1.5.1.221024",
        "yapf>=0.32.0",
        "toml>=0.10.2",
	"mkdocs",
	"mkdocs-material",
	"pillow",
	"pygments",
	"mkdocs-jupyter",
	"cairosvg",
	"mkautodoc",
	"mkdocs-literate-nav",
        "mkdocs-schema-reader"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=optim00 --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["optim00/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
