[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lgm_bdse"
description = 'Borja'
readme = "README.md"
requires-python = ">=3.11"
keywords = []
authors = [{ name = "Borja", email = "borjaf696@gmail.com" }]
classifiers = [
        "Development Status :: 4 - Beta",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
        "pandas>=1.1.5",
        "seaborn>=0.12.2",
        "scikit-learn>=1.3.0",
        "tensorflow>=2.11.1",
        "pydot>=1.4.2",
        "wandb>=0.15.7",
        "pytest>=7.4.3",
]

[tool.hatch.version]
path = "lgm_bdse/__about__.py"

[tool.hatch.envs.default]
path = ".venv"
dependencies = [
        "jupyterlab>=4.0.0a1",
        "black>=22.8.0",
        "pytest",
        "pytest-cov",
        "isort>=5.10.1",
        "jupyterlab-code-formatter>=1.5.3",
        "python-dotenv>=0.20.0",
        "matplotlib>=3.3.4",
        "mypy>=0.971",
        "pandas-stubs>=1.2.0.62",
        "yapf>=0.32.0",
        "toml>=0.10.2",
	"mkdocs",
	"mkdocs-material",
	"pillow",
	"pygments",
	"mkdocs-jupyter",
	"cairosvg",
	"mkautodoc",
	"mkdocs-literate-nav",
        "mkdocs-schema-reader"
]

[tool.hatch.build.targets.wheel.force-include]
"pyproject.toml" = "./pyproject.toml"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=optim00 --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
